<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/graph"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            >

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/icon"
                android:contentDescription="@string/cirulo_de_colores"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
            />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/question"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/mensaje_main"
            />

        <LinearLayout
            android:id="@+id/options"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/verySadButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/ic_verysad"
                android:background="@android:color/transparent"
                />

            <ImageButton
                android:id="@+id/sadButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/ic_sad"
                android:background="@android:color/transparent"
                />

            <ImageButton
                android:id="@+id/neutralButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/ic_neutral"
                android:background="@android:color/transparent"
                />

            <ImageButton
                android:id="@+id/happyButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/ic_happy"
                android:background="@android:color/transparent"
                />

            <ImageButton
                android:id="@+id/veryHappyButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/ic_veryhappy"
                android:background="@android:color/transparent"
                />
        </LinearLayout>

        <Button
            android:id="@+id/guardarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/white"
            android:text="@string/guardar"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            />

        <GridLayout
            android:id="@+id/bargraphs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:columnCount="2">

            <TextView
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="@string/muy_feliz"
                android:layout_marginEnd="15dp"
                />

            <View
                android:id="@+id/graphVeryHappy"
                android:layout_height="20dp"
                android:layout_width="250dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="@string/feliz"
                android:layout_marginEnd="15dp"
                />

            <View
                android:id="@+id/graphHappy"
                android:layout_height="20dp"
                android:layout_width="250dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="@string/neutral"
                android:layout_marginEnd="15dp"
                />

            <View
                android:id="@+id/graphNeutral"
                android:layout_height="20dp"
                android:layout_width="250dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="@string/sad"
                android:layout_marginEnd="15dp"
                />

            <View
                android:id="@+id/graphSad"
                android:layout_height="20dp"
                android:layout_width="250dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="@string/very_sad"
                android:layout_marginEnd="15dp"
                />

            <View
                android:id="@+id/graphVerySad"
                android:layout_height="20dp"
                android:layout_width="250dp"
                />
        </GridLayout>
    </LinearLayout>
</ScrollView>